--- a/iRevatureTrainingRoomPlanner/Storyboards/Base.lproj/Main.storyboard
+++ b/iRevatureTrainingRoomPlanner/Storyboards/Base.lproj/Main.storyboard
@@ -117,6 +117,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" backgroundImage="people"/>
+                                <connections>
+                                    <action selector="batchesComingSoon" destination="3s0-MD-dTv" eventType="touchDown" id="i8e-du-4Tq"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rev-logo" translatesAutoresizingMaskIntoConstraints="NO" id="Jdj-Nq-GJl">
                                 <rect key="frame" x="83" y="88" width="285" height="152"/>
